--- a/openwhisk-tank-action/.project
+++ b/openwhisk-tank-action/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>openwhisk-movement-action</name>
+	<name>openwhisk-tank-action</name>
 	<comment></comment>
 	<projects>
 	</projects>
