--- a/iot-tank/pom.xml
+++ b/iot-tank/pom.xml
@@ -27,6 +27,16 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     	<artifactId>junit</artifactId>
     	<version>3.8.1</version>
     </dependency>
+	<dependency>
+	  <groupId>com.cloudant</groupId>
+	  <artifactId>cloudant-client</artifactId>
+	  <version>2.5.1</version>
+	</dependency>    
+	<dependency>
+	  <groupId>JRPiCam</groupId>
+	  <artifactId>JRPiCam</artifactId>
+	  <version>1.0.1</version>
+	</dependency>  
   </dependencies>
 
   <build>
