--- a/iot-tank/pom.xml
+++ b/iot-tank/pom.xml
@@ -56,7 +56,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <configuration>
           <archive>
             <manifest>
-              <mainClass>com.ibm.iot.tank.App</mainClass>
+              <mainClass>com.ibm.iot.tank.main.App</mainClass>
             </manifest>
           </archive>
         </configuration>
